--- a/.github/workflows/Method-Check.yml
+++ b/.github/workflows/Method-Check.yml
@@ -18,9 +18,10 @@ jobs:
           python-version: '3.8'
 
       - name: Install dependencies
-        run: pip install requests PyGithub
+        run: pip install requests PyGithub pandas
 
       - name: Run Method Change Checker
-        run: python check_methods.py ${{ github.event.pull_request.number }}
+        run: python scripts/check_methods.py ${{ github.event.pull_request.number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}  # Auto-sets 'owner/repo'
